--- a/hotspot/alogin.html
+++ b/hotspot/alogin.html
@@ -31,7 +31,7 @@
 
 <div id="footer">
     <div class="container">
-        <p class="text-muted">Powered by KEMENTERIAN DESA, PDT DAN TRANSMIGRASI</p>
+        <p class="text-muted">Powered by Binus University</p>
     </div>
 </div>
 
